# dbus-sandbox

./: CMakeLists.txt  readme.md
common/inc/: complexProxy.h  customdata.h
common/src/: complexProxy.cpp  customdata.cpp
complex-dbus-client/: CMakeLists.txt  main.cpp
complex-dbus-service/: CMakeLists.txt  com.cana.complex.xml  complexAdaptor.cpp  complexAdaptor.h  complexinterface.cpp  complexinterface.h  dbus-functions.sh  generate-adaptor.sh  main.cpp
